Prototypes for two levels: * GoldenBeach * PanambiWoods; Portals are now added on Portals.xml; Portals now can be blocked if the Player doesn't have an specific quest in progress; prevent player from grabbing item that isn't part of the current quest; added three more items, with their respective quests