@@ -34,9 +34,8 @@ public enum QuestLog {
             }
         }
 
-        List<Quest> list = quests.stream().filter(v -> {
-            return v.getQuestStatus() == EnumQuestStatus.AVAILABLE && v.getQuestGiver() == questGiver.getClass();
-        }).collect(Collectors.toList());
+        List<Quest> list = quests.stream().filter(v -> v.getQuestStatus() == EnumQuestStatus.AVAILABLE
+                && v.getQuestGiver() == questGiver.getClass()).toList();
         if (!list.isEmpty()) {
             res = list.get(0);
         }
@@ -45,16 +44,35 @@ public enum QuestLog {
     }
 
     public <T extends BaseMonster> boolean hasQuestsInProgress(T questGiver) {
-        List<Quest> list = quests.stream().filter(v -> {
-            return (v.getQuestStatus() == EnumQuestStatus.IN_PROGRESS || v.getQuestStatus() == EnumQuestStatus.COMPLETED)
-                    && v.getQuestGiver() == questGiver.getClass();
-        }).collect(Collectors.toList());
+        List<Quest> list = quests.stream().filter(v -> (v.getQuestStatus() == EnumQuestStatus.IN_PROGRESS
+                || v.getQuestStatus() == EnumQuestStatus.COMPLETED)
+                && v.getQuestGiver() == questGiver.getClass()).toList();
 
         return !list.isEmpty();
     }
 
+    public boolean isQuestTaken(String questName) {
+        boolean ret = false;
+        for(Quest q: quests) {
+            if (q.getName().equals(questName) && q.getQuestStatus() == EnumQuestStatus.IN_PROGRESS) {
+                ret = true;
+                break;
+            }
+        }
+
+        return ret;
+    }
+
     public List<Quest> getQuests() {
         return new ArrayList<>(quests);
+    }
+
+    public <T extends BaseMonster> boolean isQuestEntity(T entity) {
+        if(getCurrentQuests().isEmpty()) {
+            return false;
+        }
+        return entity.getClass().equals(getCurrentQuests().get(0).getQuestEntityType())
+                && getCurrentQuests().get(0).isInProgress();
     }
 
     public List<Quest> getCurrentQuests() {
